[gd_scene load_steps=6 format=2]

[ext_resource path="res://AutoPotato.gd" type="Script" id=1]
[ext_resource path="res://lpc_base_farm.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 1 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 7, 1 )

[sub_resource type="CircleShape2D" id=3]
radius = 6.0

[node name="AutoPotato" type="Node2D"]
script = ExtResource( 1 )

[node name="PotatoYoung" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="PotatoYoung"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1376, 32, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PotatoYoung"]
position = Vector2( 1, 10 )
shape = SubResource( 1 )

[node name="PotatoGrowing" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="PotatoGrowing"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1376, 96, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PotatoGrowing"]
position = Vector2( 0, 9 )
shape = SubResource( 2 )

[node name="PotatoGrowing2" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="PotatoGrowing2"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1376, 160, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PotatoGrowing2"]
position = Vector2( 0, 9 )
shape = SubResource( 2 )

[node name="PotatoMature" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="PotatoMature"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1376, 224, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PotatoMature"]
position = Vector2( 0, 9 )
shape = SubResource( 2 )

[node name="PotatoHarvested" type="Sprite" parent="."]
position = Vector2( 128, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1376, 288, 32, 32 )

[node name="PotatoProduce" type="StaticBody2D" parent="."]

[node name="Sprite" type="Sprite" parent="PotatoProduce"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 1376, 352, 32, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PotatoProduce"]
position = Vector2( 0, 7 )
shape = SubResource( 3 )

